--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/swagger": "^11.0.6",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -42,7 +43,8 @@
     "prisma": "^6.5.0",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
