--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/swagger": "^11.0.6",
     "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.5.0",
